--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,7 @@
 
 
 html{
-    font-size: 16px;
+    font-size: 100%;
     font-family: Vazir;
 }
 
@@ -40,3 +40,108 @@ body{
     }
 }
 
+
+// Hero Section
+
+.hero-section{
+    display: flex;
+    width: 100%;
+
+    .intro{
+        background-color: #21aa58;
+        color: white;
+        width: 50%;
+        padding: 2rem;
+        padding-right: 15%;
+
+        h3{
+            font-size: 2.25rem;
+            font-weight: 700;
+            line-height: 3.25rem;
+            margin-bottom: 1rem;
+        }
+
+        p{
+            font-size: 1.25rem;
+            font-weight: 300;
+            line-height: 1.7rem;
+            margin-bottom: 1rem;
+        }
+
+        form.send-link{
+            display: flex;
+            align-items: center;
+            height: 3.5rem;
+            margin-bottom: 1rem;
+
+            .send-link-input{
+                display: flex;
+                align-items: center;
+                border-bottom: 1px solid white;
+                flex: 0 0 24%;
+
+                input{
+                    background-color: transparent;
+                    outline: none;
+                    border: none;
+                    color: white;
+                    line-height: 3rem;
+                    padding: 0 0.5rem;
+                    height: 2.5rem;
+                    // width: 100%;
+                }
+
+                input::placeholder{
+                    color: white;
+                }
+
+                .send-link-input-dot{
+                    width: 0.5rem;
+                    height: 0.5rem;
+                    border-radius: 9999999999px;
+                    background-color: white;
+                    margin-left: 0.5rem;
+                }
+            }
+
+
+            button{
+                border: none;
+                border-radius: 0.375rem;
+                color: #21aa58;
+                font-family: inherit;
+                padding: 0 1rem;
+                flex: 0 0 50%;
+                height: 2.5rem;
+                margin-right: 1rem;
+            }
+
+        }
+
+        button.webappbutton{
+            border: 1px solid white;
+            background-color: transparent;
+            color:white;
+            font-family: inherit;
+            font-size: 1.125rem;
+            cursor: pointer;
+            border-radius: 0.325rem;
+            height: 3rem;
+            padding: 0 1rem;
+        }
+
+        button.webappbutton:hover{
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+    }
+
+    .picture{
+        background-image: url(./Statics/Images/hero\ section\ pic.png);
+        min-height: 40vh;
+        background-position: center center;
+        background-size: cover;
+        width: 50%;
+        // transform: scaleX(-1);
+        flex: 0 0 50%;
+    }
+}
