--- a/style.scss
+++ b/style.scss
@@ -145,3 +145,27 @@ body{
         flex: 0 0 50%;
     }
 }
+
+
+// Download Section
+
+div.container{
+    background-color: white;
+    min-width: 100%;
+    width: 100%;
+
+    div.links{
+        min-height: 30vh;
+        display: grid;
+        width: 100%;
+        grid-template-columns: auto auto auto auto auto;
+        align-items: center;
+        justify-content: space-around;
+        content-visibility: auto;
+        background-color: white;
+
+        a{
+            margin: 2rem;
+        }
+    }
+}
