--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
 @import url(./Fonts.css);
+:root {
+  --text-xs: 0.725rem;
+  --text-s: 0.825rem;
+  --text-md: 1.125rem;
+  --text-l: 1.25rem;
+  --text-xl: 1.375rem;
+  --text-2xl: 2.25rem;
+}
+
 html {
   font-size: 100%;
   font-family: Vazir;
@@ -29,7 +38,7 @@ html {
 .navbar-links li {
   margin-right: 1.5rem;
   font-weight: 200;
-  font-size: 15px;
+  font-size: var(--text-s);
 }
 
 .hero-section {
@@ -44,13 +53,13 @@ html {
   padding-right: 15%;
 }
 .hero-section .intro h3 {
-  font-size: 2.25rem;
+  font-size: var(--text-2xl);
   font-weight: 700;
   line-height: 3.25rem;
   margin-bottom: 1rem;
 }
 .hero-section .intro p {
-  font-size: 1.25rem;
+  font-size: var(--text-l);
   font-weight: 300;
   line-height: 1.7rem;
   margin-bottom: 1rem;
@@ -101,7 +110,7 @@ html {
   background-color: transparent;
   color: white;
   font-family: inherit;
-  font-size: 1.125rem;
+  font-size: var(--text-md);
   cursor: pointer;
   border-radius: 0.325rem;
   height: 3rem;
@@ -147,7 +156,7 @@ div.needs {
 }
 div.needs .needs-header {
   font-weight: 700;
-  font-size: 2.25rem;
+  font-size: var(--text-2xl);
   line-height: 3.25rem;
   text-align: center;
   padding: 2.5rem;
@@ -183,7 +192,7 @@ div.needs .needs-apps .subapp .subapp-info h3 {
   margin-bottom: 0.5rem;
 }
 div.needs .needs-apps .subapp .subapp-info p {
-  font-size: 0.875rem;
+  font-size: var(--text-s);
   color: rgba(0, 0, 0, 0.6);
 }
 
@@ -199,20 +208,20 @@ div.needs .needs-apps .subapp .subapp-info p {
   color: #333;
 }
 .responses .responses-intro h3 {
-  font-size: 1.375rem;
+  font-size: var(--text-xl);
   font-weight: bold;
   line-height: 3.25rem;
   margin: 1rem 0;
   padding-right: 5%;
 }
 .responses .responses-intro p {
-  font-size: 1.25rem;
+  font-size: var(--text-l);
   font-weight: 300;
   line-height: 1.7rem;
   margin-bottom: 1rem;
   padding-right: 5%;
   width: 60%;
-  font-size: 0.875rem;
+  font-size: var(--text-s);
   font-weight: 300;
 }
 .responses .responses-pic {
@@ -243,14 +252,14 @@ div.needs .needs-apps .subapp .subapp-info p {
   margin-bottom: 1rem;
 }
 .responses .needs-subpics .needs-subpics-complete .needs-subpics-h3 {
-  font-size: 1.125rem;
+  font-size: var(--text-md);
   font-weight: bold;
   margin-bottom: 1rem;
 }
 .responses .needs-subpics .needs-subpics-complete .needs-subpics-p {
   font-weight: 300;
   color: #333;
-  font-size: 0.875rem;
+  font-size: var(--text-s);
   line-height: 1.7;
   margin-bottom: 1rem;
 }
