--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,14 @@
 @import url(./Fonts.css);
 
+:root{
+    --text-xs: 0.725rem;
+    --text-s: 0.825rem;
+    --text-md: 1.125rem;
+    --text-l: 1.25rem;
+    --text-xl: 1.375rem;
+    --text-2xl: 2.25rem;
+}
+
 
 html{
     font-size: 100%;
@@ -35,7 +44,7 @@ body{
     li{
         margin-right: 1.5rem;
         font-weight: 200;
-        font-size: 15px;
+        font-size: var(--text-s);
     }
 }
 
@@ -54,14 +63,14 @@ body{
         padding-right: 15%;
 
         h3{
-            font-size: 2.25rem;
+            font-size: var(--text-2xl);
             font-weight: 700;
             line-height: 3.25rem;
             margin-bottom: 1rem;
         }
 
         p{
-            font-size: 1.25rem;
+            font-size: var(--text-l);
             font-weight: 300;
             line-height: 1.7rem;
             margin-bottom: 1rem;
@@ -122,7 +131,7 @@ body{
             background-color: transparent;
             color:white;
             font-family: inherit;
-            font-size: 1.125rem;
+            font-size: var(--text-md);
             cursor: pointer;
             border-radius: 0.325rem;
             height: 3rem;
@@ -181,7 +190,7 @@ div.needs{
 
     .needs-header{
         font-weight: 700;
-        font-size: 2.25rem;
+        font-size: var(--text-2xl);
         line-height: 3.25rem;
         text-align: center;
         padding: 2.5rem;
@@ -221,7 +230,7 @@ div.needs{
                 }
 
                 p{
-                    font-size: 0.875rem;
+                    font-size: var(--text-s);
                     color: rgba(0, 0, 0, 0.6);
                 }
             }
@@ -247,7 +256,7 @@ div.needs{
         color: #333;
 
         h3{
-            font-size: 1.375rem;
+            font-size: var(--text-xl);
             font-weight: bold;
             line-height: 3.25rem;
             margin: 1rem 0;
@@ -255,13 +264,13 @@ div.needs{
         }
 
         p{
-            font-size: 1.25rem;
+            font-size: var(--text-l);
             font-weight: 300;
             line-height: 1.7rem;
             margin-bottom: 1rem;
             padding-right: 5%;
             width: 60%;
-            font-size: 0.875rem;
+            font-size: var(--text-s);
             font-weight: 300;
         }
     }
@@ -297,7 +306,7 @@ div.needs{
             }
 
             .needs-subpics-h3{
-                font-size: 1.125rem;
+                font-size: var(--text-md);
                 font-weight: bold;
                 margin-bottom: 1rem;
             }
@@ -305,7 +314,7 @@ div.needs{
             .needs-subpics-p{
                 font-weight: 300;
                 color: #333;
-                font-size: 0.875rem;
+                font-size: var(--text-s);
                 line-height: 1.7;
                 margin-bottom: 1rem;
             }
