--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ html {
   height: 5.5rem;
   display: flex;
   background-color: white;
+  position: fixed;
+  width: 100%;
+  z-index: 1500;
+  top: 0;
 }
 
 .container {
@@ -34,16 +38,72 @@ html {
 
 .navbar-links {
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.navbar-links li {
+.navbar-links .navbar-links-dropdown {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.navbar-links .navbar-links-dropdown .superapp {
+  padding-left: 0.25rem;
+}
+.navbar-links .dropdown_menu_icon {
+  transform: rotate(90deg);
+  width: 1rem;
+  height: 1rem;
+  color: rgba(0, 0, 0, 0.6);
+}
+.navbar-links > li {
   margin-right: 1.5rem;
   font-weight: 200;
   font-size: var(--text-s);
+  position: relative;
+  padding: 1rem 0;
+  cursor: pointer;
+}
+.navbar-links > li .navbar-submenu {
+  position: absolute;
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 1rem 0;
+  z-index: 2;
+  border-radius: 0.75rem;
+  top: 2.5rem;
+  right: -2rem;
+  display: none;
+}
+.navbar-links > li .navbar-submenu > li {
+  padding: 0.75rem 1.5rem;
+  white-space: nowrap;
+  color: #333;
+}
+.navbar-links > li .navbar-submenu > li > a {
+  text-decoration: none;
+  color: #333;
+  font-weight: 300;
+}
+.navbar-links > li > a {
+  color: #333;
+  text-decoration: none;
+}
+.navbar-links > li > a:hover {
+  color: #00d170;
+  font-weight: 500;
+}
+.navbar-links > li > div:hover {
+  color: #00d170;
+  font-weight: 500;
+}
+.navbar-links > li:hover .navbar-submenu {
+  display: block;
 }
 
 .hero-section {
   display: flex;
   width: 100%;
+  margin-top: 5.5rem;
 }
 .hero-section .intro {
   background-color: #21aa58;
