--- a/style.scss
+++ b/style.scss
@@ -23,6 +23,10 @@ body{
     height: 5.5rem;
     display: flex;
     background-color: white;
+    position: fixed;
+    width: 100%;
+    z-index: 1500;
+    top: 0;
 }
 
 .container{
@@ -40,11 +44,77 @@ body{
 
 .navbar-links{
     display: flex;
+    align-items: center;
+    justify-content: center;
 
-    li{
+    .navbar-links-dropdown{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .superapp{
+            padding-left: 0.25rem;
+        }
+    }
+
+    .dropdown_menu_icon{
+        transform: rotate(90deg);
+        width: 1rem;
+        height: 1rem;
+        color: rgba(0, 0, 0, 0.6);
+    }
+
+    >li{
         margin-right: 1.5rem;
         font-weight: 200;
         font-size: var(--text-s);
+        position: relative;
+        padding: 1rem 0;
+        cursor: pointer;
+
+        .navbar-submenu{
+            position: absolute;
+            background-color: white;
+            border: 1px solid rgba(0, 0, 0, 0.2);
+            padding: 1rem 0;
+            z-index: 2;
+            border-radius: 0.75rem;
+            top: 2.5rem;
+            right: -2rem;
+            display: none;
+
+            >li{
+                padding: 0.75rem 1.5rem;
+                white-space: nowrap;
+                color: #333;
+
+
+                >a{
+                    text-decoration: none;
+                    color: #333;
+                    font-weight: 300;
+                }
+            }
+        }
+        
+        >a{
+            color: #333;
+            text-decoration: none;
+        }
+
+        >a:hover{
+            color: #00d170;
+            font-weight: 500;            
+        }
+
+        >div:hover{
+            color: #00d170;
+            font-weight: 500;
+        }
+    }
+
+    >li:hover .navbar-submenu{
+        display: block;
     }
 }
 
@@ -54,6 +124,7 @@ body{
 .hero-section{
     display: flex;
     width: 100%;
+    margin-top: 5.5rem;
 
     .intro{
         background-color: #21aa58;
