--- a/style.css
+++ b/style.css
@@ -324,4 +324,92 @@ div.needs .needs-apps .subapp .subapp-info p {
   margin-bottom: 1rem;
 }
 
+.drivers-signup {
+  background-color: #f2f5f8;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 2rem;
+}
+.drivers-signup h3 {
+  font-size: var(--text-2xl);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2.5rem;
+}
+.drivers-signup p {
+  color: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: var(--text-l);
+  font-weight: 300;
+}
+.drivers-signup button {
+  background-color: #21aa58;
+  color: white;
+  border: none;
+  outline: none;
+  font-family: inherit;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  font-size: var(--text-md);
+  margin: 2rem;
+}
+.drivers-signup button:hover {
+  background-color: #00d170;
+}
+.drivers-signup video {
+  width: 70%;
+  margin-top: 1rem;
+  border-radius: 10px;
+}
+.drivers-signup .benefits {
+  display: flex;
+  margin-top: 3rem;
+  width: 71.5%;
+  justify-content: space-between;
+}
+.drivers-signup .benefits .benefits-cards-complete {
+  width: 50%;
+}
+.drivers-signup .benefits .benefits-cards-complete .benefits-cards {
+  background-color: white;
+  margin: 1rem;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  height: 20vh;
+}
+.drivers-signup .benefits .benefits-cards-complete .benefits-cards .benefits-pic {
+  width: 25%;
+  display: flex;
+}
+.drivers-signup .benefits .benefits-cards-complete .benefits-cards .benefits-info {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.drivers-signup .benefits .benefits-cards-complete .benefits-cards .benefits-info h3 {
+  font-size: var(--text-md);
+  display: flex;
+  align-self: flex-start;
+  justify-content: flex-start;
+  width: 80%;
+  padding-right: 10%;
+  padding: 1rem;
+}
+.drivers-signup .benefits .benefits-cards-complete .benefits-cards .benefits-info p {
+  font-size: var(--text-s);
+  font-weight: 300;
+  display: flex;
+  align-self: flex-start;
+  justify-content: flex-start;
+  width: 80%;
+  padding-right: 10%;
+  padding: 1rem;
+}
+
 /*# sourceMappingURL=style.css.map */
